--- a/webapp/app/less/app.less
+++ b/webapp/app/less/app.less
@@ -603,3 +603,61 @@ ul.messenger .messenger-message-inner,.ngCellText {
   max-height: 300px;
   overflow-y: auto;
 }
+
+.models-tree .list-group-item:last-child{
+  border-radius: 0px !important;
+}
+
+.models-tree .list-group-item:first-child{
+  border-radius: 0px !important;
+}
+
+//.cube-models-cntnr{
+//  -webkit-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 2s;
+//  -moz-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 2s;
+//  -o-transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 2s;
+//  transition:all cubic-bezier(0.250, 0.460, 0.450, 0.940) 2s;
+//  line-height:20px;
+//  opacity:1;
+//  left: 0;
+//  padding:10px;
+//  background:white;
+//}
+
+
+//.cube-models-cntnr.ng-hide {
+//  line-height:0;
+//  opacity:0;
+//  left: -100%;
+//  padding:0 10px;
+//}
+
+.cube-models-cntnr.ng-hide-add {
+  -webkit-animation: slideOutLeft 0.5s;;
+  animation: slideOutLeft 0.5s;;
+  display: block !important;
+}
+.cube-models-cntnr.ng-hide-add+div {
+//  width: 100%;
+  right: 0px;
+  position: absolute;
+  float: right;
+  -webkit-transition: width 0.5s;;
+  -moz-transition: width 0.5s;;
+  -o-transition: width 0.5s;;
+  transition: width 0.5s;;
+}
+
+.cube-models-cntnr.ng-hide-remove {
+  -webkit-animation: slideInLeft 0.5s;;
+  animation: slideInLeft 0.5s;;
+}
+.cube-models-cntnr.ng-hide-remove+div{
+  position: absolute;
+  right: 0;
+  width: 75%;
+  -webkit-transition: width 0.5s;;
+  -moz-transition: width 0.5s;;
+  -o-transition: width 0.5s;;
+  transition: width 0.5s;;
+}
