KYLIN-919,model name validate

--- a/webapp/app/partials/cubeDesigner/info.html
+++ b/webapp/app/partials/cubeDesigner/info.html
@@ -25,8 +25,12 @@
                   <label class="col-xs-12 col-sm-3 control-label no-padding-right">
                     <b>Model Name</b>
                   </label>
-                  <div class="col-xs-12 col-sm-6">
-                    <input  ng-if="state.mode=='edit'" ng-disabled="{{isEdit}}" ng-model="cubeMetaFrame.model_name" type="text" typeahead="model for model in modelsManager.modelNameList" class="form-control">
+                  <div class="col-xs-12 col-sm-6"   ng-class="{'has-error':forms.cube_info_form.model_name.$invalid && (forms.cube_info_form.model_name.$dirty||forms.cube_info_form.model_name.$sbumitted)}">
+                    <input  ng-if="state.mode=='edit'" ng-disabled="{{isEdit}}" name="model_name" required ng-model="cubeMetaFrame.model_name" type="text"
+                            placeholder="Input your model name"
+                            typeahead="model for model in modelsManager.modelNameList"
+                            class="form-control"/>
+                    <small class="help-block" ng-show="forms.cube_info_form.model_name.$error.required && (forms.cube_info_form.model_name.$dirty||forms.cube_info_form.$sbumitted)">Model name is required.</small>
                     <span ng-if="state.mode=='view'">{{cubeMetaFrame.model_name}}</span>
                   </div>
 
