update community page, add development page

--- a/website/_layouts/default.html
+++ b/website/_layouts/default.html
@@ -24,12 +24,19 @@
   <body>
 
     {% include header.html %}
+<main id="main" >
+  <div class="container" >
+    <div id="zero" class=" main" >
 
     <div class="page-content">
       <div class="wrapper">
         {{ content }}
       </div>
     </div>
+
+    </div>
+  </div>
+</main>
 
     {% include footer.html %}
 
