--- a/website/_includes/header.cn.html
+++ b/website/_includes/header.cn.html
@@ -41,10 +41,10 @@
       <ul class="nav navbar-nav">
      <li><a href="/cn">首页</a></li>
           <li><a href="/cn/docs" >文档</a></li>
-          <li><a href="/community" >社区</a></li>
-          <li><a href="/blog">博客</li>
           <li><a href="/cn/download">下载</li>
-          <li><a href="/about" >关于</a></li>
+          <li><a href="/community" >社区</a></li>
+          <li><a href="/development" >开发</a></li>
+          <li><a href="/blog">博客</li>
           <li><a href="/" >English</a></li>
           <li><a href="https://twitter.com/apachekylin" target="_blank" class="fa fa-twitter fa-lg" title="Twitter: @ApacheKylin" ></a></li>
           <li><a href="https://github.com/apache/incubator-kylin" target="_blank" class="fa fa-github-alt fa-lg" title="Github: apache/incubator-kylin" ></a></li>          
