--- a/website/_includes/header.html
+++ b/website/_includes/header.html
@@ -46,10 +46,10 @@
       <ul class="nav navbar-nav">
      <li><a href="/">Home</a></li>
           <li><a href="/docs" >Docs</a></li>
-          <li><a href="/community" >Community</a></li>
-          <li><a href="/blog">Blog</li>
           <li><a href="/download">Download</li>
-          <li><a href="/about" >About</a></li>
+          <li><a href="/community" >Community</a></li>
+          <li><a href="/development" >Development</a></li>
+          <li><a href="/blog">Blog</li>
           <li><a href="/cn" >中文版</a></li>  
           <li><a href="https://twitter.com/apachekylin" target="_blank" class="fa fa-twitter fa-lg" title="Twitter: @ApacheKylin" ></a></li>
           <li><a href="https://github.com/apache/incubator-kylin" target="_blank" class="fa fa-github-alt fa-lg" title="Github: apache/incubator-kylin" ></a></li>          
